# sara-engine-project

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  distilled_sara_llm.json  distilled_sara_llm.msgpack  fast_fix.py  fix_structure.py  mypy.ini  mypy_errors.txt  mypy_errors2.txt  mypy_errors3.txt  pyproject.toml  sara_ltm.pkl  sara_model_weights.json  sara_model_weights_int.json  sara_readout_state.json  sara_vocab.json  sara_vocab_test.json  test_extract.py
.github/workflows/: release.yml
data/: chat_data.jsonl  corpus.txt  math_corpus.jsonl  math_corpus.txt  progress.json  sara_corpus.db
data/interim/: chat_data.jsonl  distill_progress.json  docs_corpus.txt  math_corpus.jsonl  test_corpus.txt
data/old/: corpus.txt
data/processed/: best_hyperparams.json  corpus.txt
data/raw/: chat_data.jsonl
doc/: About-Tools.md  COMPETITIVE_ANALYSIS.md  IMPROVEMENT_GUIDE.md  Next-generation_brain-like_cognitive_architecture_based_on_self-organized_criticality_and_dendritic_computation.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  ROADMAP.md  SARA-Engine_Documentation_Hub.md  SARA-Engine_Training_Manual.md  SARA_EVOLUTION_ROADMAP.md  SNN-based_AI_architecture_design_document.md  SPEED_ACCURACY_TRADEOFF.md  bout-Tools-EN.md  bout-Tools-JP.md  policy.md  stateful_snn_theory.md  検証結果.csv
doc/idea/: Self-organization_and_homeostasis.md
edge/: exporter.py
examples/: benchmark_hal.py  benchmark_long_context.py  benchmark_multicore.py  benchmark_multimodal_associative.py  benchmark_rl_stdp.py  benchmark_rust.py  benchmark_rust_acceleration.py  chat_sara.py  debug_sara.py  demo_advanced_snn.py  demo_agent_chat.py  demo_associative_memory_stdp.py  demo_bio_transformer.py  demo_crossmodal_recall.py  demo_interactive_chat.py  demo_lif_transformer.py  demo_million_token_agent.py  demo_mnist_snn.py  demo_multimodal_memory.py  demo_nn_module.py  demo_predictive_coding.py  demo_rl_training.py  demo_rust_lif_causal.py  demo_rust_snn_no_numpy.py  demo_sara_board.py  demo_sara_edge.py  demo_saraboard_and_loader.py  demo_semantic_spike_routing.py  demo_snn_feature_extraction.py  demo_snn_image_classification.py  demo_snn_learning.py  demo_snn_llm.py  demo_snn_pipeline.py  demo_snn_pipelines.py  demo_snn_rag.py  demo_snn_rag_persistent.py  demo_snn_text_classification.py  demo_snn_text_generation.py  demo_snn_token_classification.py  demo_snn_transformer_multipath.py  (+61 more)
examples/audio/: demo_snn_audio_classification.py
examples/benchmarks/: benchmark_integrated_phase2.py  benchmark_long_context.py  benchmark_memory_retention.py  benchmark_multimodal_hub.py  benchmark_phase2_features.py  benchmark_predictive_coding.py  benchmark_predictive_lm.py  benchmark_predictive_lm_phase2.py  benchmark_rl_stdp.py  benchmark_snn_transformer.py  integrated_rust_acceleration_benchmark.py
examples/core/: demo_advanced_snn.py  demo_bio_transformer.py  demo_h_jepa_noise_robustness.py  demo_h_jepa_real_data.py  demo_snn_classification.py  demo_snn_feature_extraction.py  demo_snn_moe.py  demo_snn_transformer.py  demo_snn_transformer_multipath.py  demo_spike_stream_processing.py  demo_spiking_transformer_save_load.py  demo_transformers_api.py
examples/edge/: demo_sara_edge.py
examples/integrated/: integrated_data_visualization_demo.py  integrated_sara_agent_showcase.py  integrated_snn_rag_demo.py  integrated_spiking_llm_demo.py  integrated_vision_snn_demo.py
examples/learning/: demo_force_time_series_prediction.py  demo_rl_training.py  demo_snn_learning.py  demo_stream_learning.py  demo_unified_snn.py
examples/memory/: demo_scalable_ltm.py
examples/multimodal/: demo_multimodal_memory.py  demo_multimodal_pipeline.py
examples/nlp/: demo_direct_wiring.py  demo_direct_wiring_chat.py  demo_interactive_chat.py  demo_predictive_lm.py  demo_snn_llm.py  demo_snn_rag.py  (+6 more)
sara_rust_core/: Cargo.toml
sara_rust_core/src/: lib.rs
scripts/: __init__.py  chat_rust_core.py  collect_all.py  collect_aozora.py  collect_math.py  distill_llm.py  example_usage.py  health_check.py  manage_db.py  sara_cli.py  test_math_chat.py  train_chat.py
tests/: test_active_inference_consolidation.py  test_agent_dialogue_benchmark.py  test_bcm_stdp.py  test_biological_distillation.py  test_chat_agent_calculator.py  test_chat_utils.py  test_cli_entrypoints.py  test_cognitive_agent.py  test_cognitive_dynamics.py  test_corpus_utils.py  test_crossmodal_association.py  test_direct_map_utils.py  test_dvs_data.py  test_evaluation.py  test_event_driven_snn.py  test_force_infer_cli.py  test_force_learning.py  test_force_training_cli.py  test_greedy_layerwise.py  test_h_jepa.py  test_hippocampal_system.py  test_homeostatic_tracker.py  test_inference_memory_io.py  test_inference_reliability.py  test_million_token_snn.py  test_neurofem.py  test_neurofem_2d.py  test_neurofem_integration.py  test_neurofem_visualize.py  test_new_features.py  test_phase3_accuracy_benchmarks.py  test_pinterest_data.py  test_pipeline_activation.py  test_practical_reliability.py  test_predictive_coding.py  test_rag_pipeline.py  test_release_gate.py  test_release_metadata.py  test_release_soak.py  test_resume_force_cli.py  (+13 more)
(+223 files in other folders)
