# ディレクトリパス: pyproject.toml
# ファイルの日本語タイトル: プロジェクト設定ファイル
# ファイルの目的や内容: mypyの二重解決エラーを根絶するための決定的な設定。

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sara_engine"
version = "0.2.1"
description = "A bio-inspired Spiking Neural Network engine with Hugging Face-like pipeline APIs (CPU-only, Backprop-free)."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/yourusername/sara_engine"

[tool.maturin]
python-source = "src"
module-name = "sara_engine.sara_rust_core"

[tool.mypy]
# src を唯一のモジュール探索ルートに設定
mypy_path = "src"
# チェック対象を明示的にパッケージ名で指定
packages = ["sara_engine"]

# 二重解決を防止するための設定変更
# explicit_package_bases を False に戻し、namespace_packages を制限する
explicit_package_bases = false
namespace_packages = false

# 基本設定
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sara_engine.*"
ignore_missing_imports = true